<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_locations"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_background"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ic_back_arrow"
            android:tint="@color/dark_icon_1"/>

        <TextView
            android:id="@+id/text_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locations"
            android:textColor="@color/dark_text_1"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/ic_add"
            android:tint="@color/dark_icon_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_settings"/>

        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/ic_settings"
            android:tint="@color/dark_icon_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_locations_editing"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_background"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <CheckBox
            android:id="@+id/check_box_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="-8dp"
            android:buttonTint="@color/highlight_text"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginTop="-8dp"
            android:textColor="@color/highlight_text"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/check_box_select_all"
            app:layout_constraintRight_toRightOf="@id/check_box_select_all"
            />

        <TextView
            android:id="@+id/text_select_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_locations"
            android:textColor="@color/dark_text_1"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check_box_select_all"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/ic_delete"
            android:tint="@color/dark_text_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_locations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar_locations"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/locations_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:fabCustomSize="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_edit"
        android:backgroundTint="@color/highlight_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>