<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_item_background"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/location_layout"
    android:animateLayoutChanges="true">

    <CheckBox
        android:id="@+id/check_box_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:visibility="gone"
        android:buttonTint="@color/highlight_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/location_text_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/dark_text_1"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/check_box_selected"
        tools:text="Nottingham">
    </TextView>

    <TextView
        android:id="@+id/location_text_region_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/dark_text_2"
        android:paddingBottom="4dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/location_text_place_name"
        app:layout_constraintStart_toEndOf="@id/check_box_selected"
        app:layout_constraintBottom_toTopOf="@id/separator"
        tools:text="England, UK">
    </TextView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_arrows"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_text_1"
            android:textSize="24dp"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="\u02C4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_text_1"
            android:textSize="24dp"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="\u02C5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/location_text_region_name"
        android:background="#cbcbcb"/>

</androidx.constraintlayout.widget.ConstraintLayout>