<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_graph"
    app:startDestination="@id/locations"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/locations"
        android:name="com.example.locations.FragmentLocations"
        android:label="fragment_locations"
        tools:layout="@layout/locations_fragment">
        <action
            android:id="@+id/action_locations_to_search"
            app:destination="@id/search" />
    </fragment>

    <fragment
        android:id="@+id/search"
        android:name="com.example.search.FragmentSearch"
        android:label="fragment_locations"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_search_to_map"
            app:destination="@id/map" />

    </fragment>

    <fragment
        android:id="@+id/map"
        android:name="com.example.map.FragmentMap"
        android:label="fragment_map"
        tools:layout="@layout/map_fragment">
        <deepLink app:uri="weatherApp://fragmentMap"/>
    </fragment>

</navigation>