...

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_weather_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <ImageView
                android:id="@+id/image_weather_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
...
                android:textColor="@color/dark_text_2"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/text_high_temp"
                app:layout_constraintBottom_toBottomOf="@id/text_high_temp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textColor="@color/dark_text_2"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/text_low_temp"
                app:layout_constraintBottom_toBottomOf="@id/text_low_temp"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/text_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_rain_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_sunrise_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_sunset_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_wind_direction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_cloud_coverage_pct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/text_humidity_pct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
