...
        android:background="@color/dark_background"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
